--- a/app/css/style.css
+++ b/app/css/style.css
@@ -67,7 +67,7 @@ body {
   background-image: url(../images/dist/section_0_bg.jpg);
   background-position: center top;
   background-repeat: no-repeat;
-  min-height: 890px;
+  min-height: 892px;
 }
 .section-0 .container {
   display: grid;
@@ -105,12 +105,12 @@ body {
 .section-1 {
   min-height: 1060px;
   background-image: url(../images/dist/section_1_bg.png);
-  background-position: center 15px;
+  background-position: center 13px;
   background-repeat: no-repeat;
 }
 .section-1_content {
-  margin-left: 638px;
-  padding-top: 62px;
+  margin-left: 639px;
+  padding-top: 61px;
 }
 .section-1_title {
   color: #416DF4;
@@ -188,8 +188,11 @@ body {
   margin-left: 20px;
 }
 .item-count {
-  margin-left: 7px;
+  margin-left: 8px;
   text-align: center;
+}
+.item-free {
+  margin-left: 22px;
 }
 
 .price-tag {
